--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -22,9 +22,14 @@
     margin-right: 20px;
 }
 
+.active{
+    text-decoration: underline;
+}
+
 .titreLogo{
     margin-left: 20px;
     font-size: 35px;
+    font-weight: bold;
 }
 
 @media screen and (max-width: 600px){ //fait disparaitre le titre locMNS sur écran inférieur à 600px
