--- a/src/app/page-gestionnaire/page-gestionnaire.component.html
+++ b/src/app/page-gestionnaire/page-gestionnaire.component.html
@@ -221,7 +221,7 @@
             </tbody>
         </table>
 
-        <div class="titre">
+        <!-- <div class="titre">
             <h2>Réservation</h2>
         </div>
 
@@ -249,8 +249,8 @@
                 <p>Sélectionnez le numéro de série du matériel*</p>
                 <mat-form-field appearance="fill">
                   <mat-label>Numéro matériel</mat-label>
-                  <mat-select formControlName="numeroSerieMateriels" [(ngModel)]="idNumeroMateriel"> <!-- Permet d'ajouter id présent dans value à data pour l'envoyer en post -->
-                    <mat-option *ngFor="let numero of listeNumeroSerieMateriel" [value]=numero.idMateriel>{{ numero.numeroSerie }}</mat-option> <!-- [value] permet de récupérer directement la valeur de l'objet -->
+                  <mat-select formControlName="numeroSerieMateriels" [(ngModel)]="idNumeroMateriel"> //Permet d'ajouter id présent dans value à data pour l'envoyer en post 
+                    <mat-option *ngFor="let numero of listeNumeroSerieMateriel" [value]=numero.idMateriel>{{ numero.numeroSerie }}</mat-option> //[value] permet de récupérer directement la valeur de l'objet
                   </mat-select>
                   <mat-error *ngIf="formControl.get('numeroSerieMateriels')?.hasError('required')"> 
                     Le numéro de série est <strong>obligatoire</strong>
@@ -284,29 +284,35 @@
                     </mat-form-field>
                   </div>
       
-                  <!-- <div class="col-lg-4 mb-3">
-                    <label for="validationDefault01">Date de début d'emprunt*</label>
-                    <input type="date" class="form-control" id="validationDefault01" required>
-                  </div>
-                  <div class="col-lg-4 mb-3">
-                    <label for="validationDefault02">Date fin d'emprunt*</label>
-                    <input type="date" class="form-control" id="validationDefault02" required>
-                  </div> -->
                 </div>
               </div>
 
               <div class="d-flex justify-content-center">
                 <button class="btn btnEnregistrer px-4" type="submit" (click)="EnregistrerReservation()">Enregistrer une réservation</button>
             </div>
-              </form>
+              </form> -->
 
         <!-- -----------------------------------Création de compte ---------------------- -->
 
         <div class="pageGestionnaire">
             <div class="container">
 
-                <form [formGroup]="formControl" #registerFrom="ngForm"
-                    (ngSubmit)="donneesFormulaire(registerFrom.value)">
+                <ng-container *ngIf="messageValidationCreationCompte" >
+                    <div class="alert alert-success messageValidation d-flex justify-content-center">
+                      <mat-icon class="iconInfo">check_circle</mat-icon>
+                      <span>{{ messageValidationCreationCompte }}</span>
+                      <mat-icon class="iconClose" (click)="closePopUpCreationCompte()">close</mat-icon>
+                    </div>
+                  </ng-container>
+                  <ng-container *ngIf="messageErreurValidationCreationCompte">
+                    <div class="alert alert-danger messageValidation">
+                      <mat-icon class="iconInfo">error</mat-icon>
+                      {{ messageErreurValidationCreationCompte }}
+                      <mat-icon class="iconClose" (click)="closePopUpCreationCompte()">close</mat-icon>
+                    </div>
+                  </ng-container>
+
+                <form [formGroup]="formControl" #registerFrom="ngForm" (ngSubmit)="donneesFormulaire(registerFrom.value)">
                     <h2 class="text-center text-black mb-5">Création de compte Utilisateur</h2>
                     <h3 class="mb-3">Informations personnelles</h3>
                     <div class="form-row">
@@ -314,7 +320,7 @@
                             <div class="col-lg-4 mb-3">
                                 <mat-form-field appearance="fill">
                                     <label>Nom*</label>
-                                    <input type="text" class="form-control" required ngModel formControlName="nom"
+                                    <input type="text" class="form-control" required formControlName="nom"
                                         matInput>
                                     <mat-error *ngIf="formControl.get('nom')?.hasError('required')">
                                         Le nom est <strong>obligatoire</strong>
@@ -324,7 +330,7 @@
                             <div class="col-lg-4 mb-3">
                                 <mat-form-field appearance="fill">
                                     <label>Prénom*</label>
-                                    <input type="text" class="form-control" required ngModel formControlName="prenom"
+                                    <input type="text" class="form-control" required formControlName="prenom"
                                         matInput>
                                     <mat-error *ngIf="formControl.get('prenom')?.hasError('required')">
                                         Le prénom est <strong>obligatoire</strong>
@@ -333,8 +339,8 @@
                             </div>
                             <div class="col-lg-3 mb-3">
                                 <mat-form-field appearance="fill">
-                                    <label>Choisir votre mot de passe*</label>
-                                    <input type="password" class="form-control" required ngModel
+                                    <label>Choisir un mot de passe*</label>
+                                    <input type="password" class="form-control" required
                                         formControlName="motDePasse" matInput>
                                     <mat-error *ngIf="formControl.get('motDePasse')?.hasError('required')">
                                         Le mot de passe est <strong>obligatoire</strong>
@@ -347,7 +353,7 @@
                                 <mat-form-field appearance="fill">
                                     <label>Adresse*</label>
                                     <input type="text" class="form-control" placeholder="Numéro et nom de rue" required
-                                        ngModel formControlName="adresse" matInput>
+                                         formControlName="adresse" matInput>
                                     <mat-error *ngIf="formControl.get('adresse')?.hasError('required')">
                                         L'adresse est <strong>obligatoire</strong>
                                     </mat-error>
@@ -356,7 +362,7 @@
                             <div class="col-lg-3 mb-3">
                                 <mat-form-field appearance="fill">
                                     <label>Ville*</label>
-                                    <input type="text" class="form-control" required ngModel formControlName="ville"
+                                    <input type="text" class="form-control" required formControlName="ville"
                                         matInput>
                                     <mat-error *ngIf="formControl.get('ville')?.hasError('required')">
                                         La ville est <strong>obligatoire</strong>
@@ -366,7 +372,7 @@
                             <div class="col-lg-3 mb-3">
                                 <mat-form-field appearance="fill">
                                     <label>Code postal*</label>
-                                    <input type="text" class="form-control" required ngModel
+                                    <input type="text" class="form-control" required
                                         formControlName="codePostale" matInput>
                                     <mat-error *ngIf="formControl.get('codePostale')?.hasError('required')">
                                         Le code postale est <strong>obligatoire</strong>
@@ -379,7 +385,7 @@
                                 <mat-form-field appearance="fill">
                                     <label>Mail*</label>
                                     <input type="text" class="form-control" placeholder="exemple@gmail.com" required
-                                        ngModel formControlName="mail" matInput>
+                                         formControlName="mail" matInput>
                                     <mat-error *ngIf="formControl.get('mail')?.hasError('required')">
                                         Le mail est <strong>obligatoire</strong>
                                     </mat-error>
@@ -389,8 +395,8 @@
                             <div class="col-lg-3 mb-3">
                                 <mat-form-field appearance="fill">
                                     <label>Numéro de téléphone*</label>
-                                    <input type="tel" class="form-control" required ngModel formControlName="numeroTelephone"
-                                        matInput>
+                                    <input type="tel" class="form-control" required
+                                        formControlName="numeroTelephone" matInput>
                                     <mat-error *ngIf="formControl.get('numeroTelephone')?.hasError('required')">
                                         Le numéro de téléphone est <strong>obligatoire</strong>
                                     </mat-error>
@@ -398,32 +404,44 @@
                             </div>
 
                             <div class="col-lg-3 mb-3">
-                                <form [formGroup]="contactForm" (ngSubmit)="submitListe()">
-                                    <label>Veuillez choisir votre statut...</label>
-                                    <select formControlName="statutUtilisateur" class="form-select"
-                                        aria-label="Default select example">
-                                        <option [ngValue]="null" selected></option>
-                                        <option *ngFor="let statut of statutUtilisateur" [ngValue]="statut.name">
-                                            {{statut.name}}</option>
+                                <mat-form-field appearance="fill">
+                                  <mat-label>Statut</mat-label>
+                                  <mat-select formControlName="idStatut" >  <!-- Permet d'ajouter id présent dans value à data pour l'envoyer en post -->
+                             <mat-option *ngFor="let role of idStatut" [value]=role.id>{{role.role}}</mat-option> <!--  [value] permet de récupérer directement la valeur de l'objet -->
+                            </mat-select>
+                                  <mat-error *ngIf="formControl.get('listeStatut')?.hasError('required')"> 
+                                    Le statut est <strong>obligatoire</strong>
+                                  </mat-error>
+                                </mat-form-field>
+                            </div>   
 
-                                    </select>
-                                </form>
-                            </div>
+                            <!-- <div class="col-lg-3 mb-3">
+                            <form [formGroup]="contactForm" (ngSubmit)="submitListe()">
+                                <p>Veuillez choisir votre statut...</p>
+                                <select formControlName="statutUtilisateur" class="form-select"
+                                    aria-label="Default select example">
+                                    <option [ngValue]="null" selected></option>
+                                    <option *ngFor="let statut of statutUtilisateur" [ngValue]="statut.name">
+                                        {{statut.name}}</option>
+                                </select>
+                            </form>
+                            </div> -->
                         </div>
                     </div>
 
                     <div class="d-flex justify-content-center">
-                        <button class="btn boutonFormulaire mb-5" type="submit">Envoyer</button>
+                        <!-- [disabled] permet d'afficher le bouton uniquement lorsque toutes les données sont renseigner -->
+                        <button [disabled]="!this.formControl.valid" class="btn boutonFormulaire mb-5" type="submit">Envoyer</button>
                     </div>
                 </form>
             </div>
         </div>
 
 
-        <h2 class="titreGestion">Gestion du parc</h2>
+        <!-- <h2 class="titreGestion">Gestion du parc</h2> -->
 
         <!-- -----------------------------------Filtre de recherche Gestion du Parc ---------------------- -->
-        <div class="filtre">
+         <!-- <div class="filtre">
             <div class="col-lg-3 mb-5">
                 <input type="date" class="form-control" id="validationDefault01" required>
             </div>
@@ -454,11 +472,11 @@
 
         <div class="d-flex justify-content-center">
             <button class="btnRechercher btn-lg px-4" type="submit">Rechercher</button>
-        </div>
+        </div>  -->
 
         <!-- -----------------------------------------Tableau Gestion du Parc ---------------------- -->
 
-        <table class="table table-light">
+        <!-- <table class="table table-light">
             <thead>
                 <tr>
                     <th scope="col">Emprunteur</th>
@@ -479,7 +497,7 @@
                     <td>@mdo</td>
                 </tr>
             </tbody>
-        </table>
+        </table> -->
         <br>
         <br>
 
