--- a/src/app/page-gestionnaire/page-gestionnaire.component.scss
+++ b/src/app/page-gestionnaire/page-gestionnaire.component.scss
@@ -1,6 +1,7 @@
 .page-gestionnaire{
-    background-color: #1F2641 ;
+    background-attachment: scroll ;
 }
+
 
 .titre {
     margin-top: 30px;
@@ -31,6 +32,10 @@ h3{
     color: #E9731D;
     margin-top: 30px;
     margin-bottom: 20px;
+}
+
+.card{
+    background-color: rgb(17, 95, 183, 0.1);
 }
 
 //-------------------------Bouton Enregistrer Réservation---------------------
@@ -97,7 +102,7 @@ h3{
 }
 
 form{
-    background-color: white;
+    background-color: rgb(17, 95, 183, 0.1);
     margin-top: 100px;
     padding: 30px;
     border-radius: 30px;
