--- a/src/app/page-gestionnaire/page-gestionnaire.component.scss
+++ b/src/app/page-gestionnaire/page-gestionnaire.component.scss
@@ -1,5 +1,7 @@
 .page-gestionnaire{
     background-attachment: scroll ;
+    background-color: #313E6F;
+    overflow-y: auto;
 }
 
 
@@ -34,9 +36,7 @@ h3{
     margin-bottom: 20px;
 }
 
-.card{
-    background-color: rgb(17, 95, 183, 0.1);
-}
+
 
 //-------------------------Bouton Enregistrer Réservation---------------------
 
@@ -102,7 +102,7 @@ h3{
 }
 
 form{
-    background-color: rgb(17, 95, 183, 0.1);
+    background-color: white;
     margin-top: 100px;
     padding: 30px;
     border-radius: 30px;
