--- a/src/app/page-gestionnaire/page-gestionnaire.component.html
+++ b/src/app/page-gestionnaire/page-gestionnaire.component.html
@@ -63,7 +63,7 @@
             <h2>Suivi des locations</h2>
         </div>
 
-        <h3>Demandes de prêts</h3>
+        <h3>Demandes de prêt</h3>
         <!-- -------------------------------------Tableau nouvelle demande de prêt---------------------- -->
         
         <ng-container *ngIf="messageValidationDemandeEmprunt" >
@@ -221,15 +221,18 @@
             </tbody>
         </table>
 
-        <!-- <div class="titre">
+        <!-- -----------------------------------Réservation ---------------------- -->
+
+
+        <div class="titre">
             <h2>Réservation</h2>
         </div>
 
-        <form [formGroup]="formControl">
+        <form [formGroup]="formControlReservation">
 
 
         <ng-container *ngIf="messageValidationReservation" >
-            <div class="alert alert-warning messageValidation d-flex justify-content-center">
+            <div class="alert alert-success messageValidation d-flex justify-content-center">
               <mat-icon class="iconInfo">check_circle</mat-icon>
               <span>{{ messageValidationReservation }}</span>
               <mat-icon class="iconClose" (click)="cacherMessage()">close</mat-icon>
@@ -249,8 +252,8 @@
                 <p>Sélectionnez le numéro de série du matériel*</p>
                 <mat-form-field appearance="fill">
                   <mat-label>Numéro matériel</mat-label>
-                  <mat-select formControlName="numeroSerieMateriels" [(ngModel)]="idNumeroMateriel"> //Permet d'ajouter id présent dans value à data pour l'envoyer en post 
-                    <mat-option *ngFor="let numero of listeNumeroSerieMateriel" [value]=numero.idMateriel>{{ numero.numeroSerie }}</mat-option> //[value] permet de récupérer directement la valeur de l'objet
+                  <mat-select formControlName="numeroSerieMateriels" [(ngModel)]="idNumeroMateriel"> <!-- Permet d'ajouter id présent dans value à data pour l'envoyer en post -->
+                    <mat-option *ngFor="let numero of listeNumeroSerieMateriel" [value]=numero.idMateriel>{{ numero.numeroSerie }}</mat-option> <!-- [value] permet de récupérer directement la valeur de l'objet -->
                   </mat-select>
                   <mat-error *ngIf="formControl.get('numeroSerieMateriels')?.hasError('required')"> 
                     Le numéro de série est <strong>obligatoire</strong>
@@ -266,8 +269,8 @@
                     <p>Date de début*</p>
                     <mat-form-field appearance="fill">
                       <mat-label>Date début</mat-label>
-                      <input  formControlName="datesEmprunt" type="date" matInput [(ngModel)]="dateDebutReservation"/>
-                      <mat-error *ngIf="formControl.get('datesEmprunt')?.hasError('required')"> 
+                      <input  formControlName="dateEmpruntReservation" type="date" matInput [(ngModel)]="dateDebutReservation"/>
+                      <mat-error *ngIf="formControl.get('dateEmpruntReservation')?.hasError('required')"> 
                         La date de début est <strong>obligatoire</strong>
                       </mat-error>
                     </mat-form-field>
@@ -277,8 +280,8 @@
                     <p>Date de fin*</p>
                     <mat-form-field appearance="fill">
                       <mat-label>Date fin</mat-label>
-                      <input  formControlName="datesEmprunt" type="date" matInput [(ngModel)]="dateFinReservation"/>
-                      <mat-error *ngIf="formControl.get('datesEmprunt')?.hasError('required')"> 
+                      <input  formControlName="dateRetourReservation" type="date" matInput [(ngModel)]="dateFinReservation"/>
+                      <mat-error *ngIf="formControl.get('dateRetourReservation')?.hasError('required')"> 
                         La date de fin est <strong>obligatoire</strong>
                       </mat-error>
                     </mat-form-field>
@@ -288,9 +291,9 @@
               </div>
 
               <div class="d-flex justify-content-center">
-                <button class="btn btnEnregistrer px-4" type="submit" (click)="EnregistrerReservation()">Enregistrer une réservation</button>
+                <button class="btn btnEnregistrer px-4" [disabled]="!this.formControlReservation.valid" (click)="EnregistrerReservation()">Enregistrer une réservation</button>
             </div>
-              </form> -->
+              </form>
 
         <!-- -----------------------------------Création de compte ---------------------- -->
 
@@ -499,6 +502,38 @@
         </table> -->
         <br>
         <br>
+
+        <!-- ----------------------------------------- Tableau historique matériels ---------------------- -->
+
+
+        <div class="titre">
+            <h2>Historique matériels</h2>
+        </div>
+
+        <table class="table table-light">
+            <thead>
+                <tr>
+                    <th scope="col">Type matériel</th>
+                    <th scope="col">Modèle</th>
+                    <th scope="col">Date d'emprunt</th>
+                    <th scope="col">Date retour</th>
+                    <th scope="col">Nom</th>
+                    <th scope="col">Prénom</th>
+                    <th scope="col">Mail</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let listeHisto of listeHistoriqueMateriels">
+                    <td>{{ listeHisto.materiel.modele.typeMateriel.nomType }}</td>
+                    <td>{{ listeHisto.materiel.modele.nomModele }}</td>
+                    <td>{{ listeHisto.dateEmprunt | date:'d/MM/yyyy' }}</td>
+                    <td>{{ listeHisto.dateRetour | date:'d/MM/yyyy' }}</td>
+                    <td>{{ listeHisto.utilisateur.nom }} </td>
+                    <td>{{ listeHisto.utilisateur.prenom }}</td>
+                    <td>{{ listeHisto.utilisateur.mail }}</td>
+                </tr>
+            </tbody>
+        </table>
 
     </div>
 </div>
