--- a/src/app/page-gestionnaire/page-gestionnaire.component.scss
+++ b/src/app/page-gestionnaire/page-gestionnaire.component.scss
@@ -103,11 +103,10 @@ h3{
 
 form{
     background-color: white;
-    margin-top: 100px;
+    margin-top: 50px;
     padding: 30px;
     border-radius: 30px;
     font-weight: bold;
-    margin-bottom: 50px;
 }
 
 h2{
@@ -145,3 +144,17 @@ h2{
     display: flex;
     justify-content: center;
 }
+
+// .matFormHistorique{
+//     background-color: white;
+//     padding: 10px;
+//     border-radius: 20px;
+// }
+
+table{
+    margin-bottom: 100px;
+}
+
+
+
+
